data/derived/comb/progs/unify/prog6608.ml.out
Characters 49-59:
  |_->bigAdd l l + mulByDigit (i-1) l;;
      ^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
